--- a/app/src/main/res/layout/participant_home_activity.xml
+++ b/app/src/main/res/layout/participant_home_activity.xml
@@ -6,8 +6,7 @@
   android:orientation="vertical"
   android:padding="24dp"
   android:gravity="center_horizontal"
-  android:fitsSystemWindows="true"
-  android:background="@color/white">
+  android:fitsSystemWindows="true">
 
   <LinearLayout
     android:layout_width="match_parent"
@@ -33,7 +32,6 @@
     android:layout_width="100dp"
     android:layout_height="100dp"
     android:src="@drawable/ic_user"
-    android:contentDescription="Participant Icon"
     android:layout_marginBottom="16dp" />
 
   <TextView
